首页，选择服务项目页面整改

--- a/web/WEB-INF/config/jdbc.properties
+++ b/web/WEB-INF/config/jdbc.properties
@@ -1,5 +1,5 @@
 #mysql-jndi#
-cmsDB=java:comp/env/scar
+cmsDB=java:comp/env/s360
 #cmsDB=java:comp/env/hhwash
 #online baohulu
 #cmsDB=java:comp/env/s176
